# doom

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
include/: asset_manager.h  config.h  engine.h  image.h  imgui_layer.h  map.h  map_renderer.h  player.h  renderer.h  utils.h  vec2.h  view_renderer.h  wad.h  window.h
lib/: asset_manager.c  engine.c  image.c  imgui_layer.c  main.c  map.c  map_renderer.c  player.c  renderer.c  utils.c  view_renderer.c  wad.c  window.c
